--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-paginate": "^8.3.0",
     "recharts": "^3.3.0",
     "socket.io-client": "^4.8.1",
+    "tinycolor2": "^1.6.0",
     "yup": "^1.7.1",
     "zustand": "^5.0.8"
   },
@@ -33,6 +34,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-modal": "^3.16.3",
+    "@types/tinycolor2": "^1.4.6",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
