--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.13.2",
+    "katex": "^0.16.28",
     "next": "^16.0.7",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
@@ -22,8 +23,10 @@
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-mathquill": "^1.0.4",
     "react-modal": "^3.16.3",
     "react-paginate": "^8.3.0",
+    "react-quill-new": "^3.8.3",
     "recharts": "^3.3.0",
     "socket.io-client": "^4.8.1",
     "tinycolor2": "^1.6.0",
